<resources>
    <string name="call_pip_not_supported_message">Device does not support picture-in-picture mode</string>
    <string name="call_callee_action_reject">Call rejected</string>
    <string name="call_callee_action_hangup">Call ended</string>
    <string name="call_callee_action_noanswer">The callee did not answer</string>
    <string name="call_newcall_tip">There is a call in progress. You can answer the call after hanging up the current call.</string>
    <string name="call_is_calling_tip">You are already in a meeting.</string>
    <string name="call_status_calling">Calling…</string>
    <string name="call_connecting_title">Connecting…</string>
    <string name="call_media_send_issue">Others may not hear you. Recovering...</string>
    <string name="call_status_encrypted">End-to-end encrypted</string>
    <string name="call_connecting_retry_tip">The meeting is connecting, please try again later.</string>
    <string name="call_disconnected_title">Disconnected</string>
    <string name="call_screen_sharing_title">\'s Screen Sharing</string>
    <string name="call_screen_sharing_placeholder">Waiting for screen…</string>
    <string name="call_instant_call_title">\'s instant call</string>
    <string name="call_instant_call_title_default">instant call</string>
    <string name="call_push_stream_limit_tip">The current server has reached the publish streaming limit. Please try again later.</string>
    <string name="call_connect_timeout_tip">Connection timed out, please try again later.</string>
    <string name="call_server_connect_exception_error">Unable to connect to the server. Please try later.</string>
    <string name="call_room_connect_exception_error">Failed to connect to the meeting. Please try again later.</string>
    <string name="call_e2ee_key_error">Unable to decrypt call key</string>
    <string name="call_connect_error_ended">The call has ended</string>
    <string name="call_no_internet_connection_tip">No internet connection. Please check your network and try again.</string>
    <string name="call_enable_camera_not_implemented_error">The camera is not supported on this device. The call will proceed in audio-only mode.</string>
    <string name="call_all_mute_timeout_reminder">No one has been speaking for a while. Would you like to leave the meeting?</string>
    <string name="call_single_person_timeout_reminder">No other participants are in the meeting. Would you like to leave?</string>
    <string name="call_reminder_button_continue">Continue</string>
    <string name="call_reminder_button_exit">Exit</string>
    <string name="call_ending_seconds_left">%ds left</string>
    <string name="call_group_send_message">%s has started a call</string>
    <string name="call_1v1_send_message">Calling</string>
    <string name="call_invite_send_message">%s invites you to a call</string>
    <string name="call_invite_fail_tip">Call invitation failed. Please try again.</string>
    <string name="call_barrage_message_join">joined</string>
    <string name="call_barrage_message_open_mic">mic ON 🙋🙋🙋</string>
    <string name="call_barrage_message_close_mic">mic OFF 🔕</string>
    <string name="call_barrage_message_screensharing">starts sharing 🖥</string>
    <string name="call_barrage_message_countdown_timer">starts a countdown timer</string>
    <string name="call_barrage_message_critical_alert_success">sent a Critical Alert</string>
    <string name="call_barrage_message_critical_alert_failed">Failed to send a Critical Alert. Please try again.</string>
    <string name="call_barrage_message_critical_alert_limited">Send too frequently. Please try again later.</string>
    <string name="call_attendees">Attendees</string>
    <string name="call_barrage_message_input_tip">Message(30 characters)</string>
    <string name="call_myself_network_poor_tip">Your network is poor, call quality may be affected</string>
    <string name="call_other_network_poor_tip">The other party\'s network is poor</string>
    <string name="call_audio_device_status_active">✓</string>
    <string name="call_audio_device_status_connecting">Connecting…</string>
    <string name="call_audio_device_status_failed">Failed</string>
    <string name="call_button_group_leave_meeting">Leave</string>
    <string name="call_button_group_alert_cancel_text">Cancel</string>
    <string name="call_button_group_alert_end_text">End for all</string>
    <string name="call_toolbar_noise_suppression_text">Mic Noise Suppression</string>
    <string name="call_denoise_mode_label">Denoise Mode</string>
    <string name="call_denoise_mode_standard">Standard</string>
    <string name="call_denoise_mode_enhanced">Enhanced</string>
    <string name="call_voice_changer_label">Voice Changer</string>
    <string name="call_voice_preset_original">Off(Original)</string>
    <string name="call_voice_preset_loli">Chipmunk</string>
    <string name="call_voice_preset_higher">Higher</string>
    <string name="call_voice_preset_deeper">Deeper</string>
    <string name="call_voice_preset_monster">Monster</string>
    <string name="call_toolbar_bottom_invite_text">Invite</string>
    <string name="call_toolbar_bottom_switch_text">Switch</string>
    <string name="call_toolbar_bottom_critical_alert_text">Critical Alert</string>
    <string name="call_action_mute">Mute</string>
    <string name="call_action_unmute">Unmute</string>
    <string name="call_mute_participant_menu_item">Mute %1$s</string>
    <string name="call_mute_participant_failed">Couldn\'t mute %1$s. Try again.</string>
    <string name="call_action_video">Video</string>
    <string name="call_action_speaker">Speaker</string>
    <string name="call_action_emoji">Emoji</string>
    <string name="call_action_more">More</string>
    <string name="call_action_end">End</string>
    <string name="call_action_people">People</string>
    <string name="call_topbar_critical_alert_entrance_text1">No answer?</string>
    <string name="call_topbar_critical_alert_entrance_text2">Send a Critical Alert.</string>
    <string name="call_join_failed_tip">Failed to join the call, please try again.</string>
    <string name="call_start_failed_tip">Failed to start the call, please try again.</string>
    <string name="call_chat_header_1v1_another_device">In call on another device.</string>
    <string name="call_chat_header_started_call">%s started a call</string>
    <string name="call_chat_header_1v1_calling">%s is calling</string>
    <string name="call_params_url_exception_tip">The server URL parameter is abnormal.</string>
    <string name="call_params_startcall_exception_tip">Abnormal conference connection parameters.</string>
    <string name="call_proxy_turn_required_tip">This proxy doesn\'t support calls. Update the proxy address, or turn off the proxy and try again.</string>
    <string name="call_service_node_dashboard_title">Call service settings</string>
    <string name="call_rating_feedback_no_choice_tip">Please give a rating</string>
    <string name="call_rating_feedback_title">Rate the quality of your call</string>
    <string name="call_rating_feedback_sub">Your answer is anonymous. We use it to help improve your call experience.</string>
    <string name="call_rating_level_very_bad">Very bad</string>
    <string name="call_rating_level_bad">Bad</string>
    <string name="call_rating_level_okay">Okay</string>
    <string name="call_rating_level_good">Good</string>
    <string name="call_rating_level_excellent">Excellent</string>
    <string name="call_rating_action_submit">Submit</string>
    <string name="call_rating_action_cancel">Not now</string>
    <string name="call_rating_question_title">Tell us what happened</string>
    <string name="call_rating_question_category_audio">Audio</string>
    <string name="call_rating_question_category_video">Video</string>
    <string name="call_rating_question_category_other">Other</string>
    <string name="call_rating_question_audio_0">Echo</string>
    <string name="call_rating_question_audio_1">Others could not hear me</string>
    <string name="call_rating_question_audio_2">Robotic or distorted</string>
    <string name="call_rating_question_audio_3">Audio too slow</string>
    <string name="call_rating_question_audio_4">Audio broke up and got choppy</string>
    <string name="call_rating_question_audio_5">Background or cracking noise</string>
    <string name="call_rating_question_audio_6">I could not hear others</string>
    <string name="call_rating_question_video_0">Video distorted with strange images</string>
    <string name="call_rating_question_video_1">Other could not see me</string>
    <string name="call_rating_question_video_2">Blurry</string>
    <string name="call_rating_question_video_3">I cloud not see others</string>
    <string name="call_rating_question_video_4">Video did not match audio</string>
    <string name="call_rating_question_video_5">Video froze</string>
    <string name="call_rating_question_other_0">Call kept disconnecting</string>
    <string name="call_rating_question_other_1">Call suddenly ended</string>
    <string name="call_rating_question_other_2">I could not answer the call</string>
    <string name="call_pip_no_permission_tip_title">Floating window permission request</string>
    <string name="call_pip_permission_tip_content">Before entering Picture-in-Picture mode, please enable the floating window permission for a smoother experience.</string>
    <string name="call_permission_button_not_now">Not now</string>
    <string name="call_permission_button_setting_go">Go to Settings</string>
    <string name="call_pip_permission_setting_failed">Unable to open settings. Please enable floating window permission manually.</string>
    <string name="call_permission_button_setting_cancel">Cancel</string>
    <string name="call_microphone_permission_deny_title">Cannot Access Microphone</string>
    <string name="call_camera_permission_deny_title">Cannot Access Camera</string>
    <string name="call_microphone_permission_deny_content">Allow %1$s to use your microphone in system settings, then return to %1$s and try again.</string>
    <string name="call_camera_permission_deny_content">Allow %1$s to use your camera in system settings, then return to %1$s and try again.</string>
    <string name="call_permission_button_settings">Settings</string>
    <string name="fullscreen_notification_settings_huawei_tip">Please go to App Settings → Other Permissions and enable “Background Popup” to allow incoming calls to appear on the lock screen.</string>
    <string name="fullscreen_notification_settings_xiaomi_tip">Please go to App Settings → Other Permissions and enable “Background Popup Interface” to allow incoming calls to appear on the lock screen.</string>
    <string name="fullscreen_notification_settings_mainland_default_tip">Please make sure “Banner Notifications” are enabled in the app settings to allow incoming calls to appear on the lock screen.</string>
    <string name="fullscreen_notification_settings_oversea_tip">Please enable the “Full-Screen Notifications” permission to allow incoming calls to appear on the lock screen.</string>
    <string name="fullscreen_notification_no_permission_oversea_tip">Please allow the “Full-Screen Notifications” permission for %s so you can receive calls while your device is locked.</string>
    <string name="fullscreen_notification_no_permission_huawei_tip">Please allow the “Background Popup” permission for %s so you can receive calls while your device is locked.</string>
    <string name="call_invite_members_title">Invite Members</string>
    <string name="call_invite_add">Add…</string>
    <string name="call_invite_search_placeholder">Search</string>
    <string name="call_invite_done">Done</string>
    <string name="call_invite_search_no_result">No results found</string>
</resources>